# llmmllab-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  RUNNER_EXTRACTION_PLAN.md  alembic.ini  app.py  composer_init.py  config.py  constants.py  docker-compose.yml  models.example.yaml  pyproject.toml  pytest.ini  run.sh  sync-code.sh
agents/: __init__.py  base.py  chat.py  embed.py
alembic/: env.py
core/: errors.py  service.py
db/: __init__.py  api_key_storage.py  cache_storage.py  checkpoint_storage.py  conversation_storage.py  document_storage.py  engine.py  image_storage.py  maintenance.py  memory_storage.py  message_content_storage.py  message_storage.py  model_storage.py  models.py  search_storage.py  seed.py  summary_storage.py  thought_storage.py  todo_storage.py  tool_call_storage.py  userconfig_storage.py
docker/: init.sql
graph/: __init__.py  cache.py  cache_utils.py  content_parser.py  executor.py  service.py  state.py  tool_call_parser.py
k8s/: README.md  apply.sh  connect.sh  deployment.yaml  env.yaml  init-script.yaml  migrate-namespace.sh  postgres-statefulset.yaml  pvc.yaml  referencegrant.yaml  reset-code-pv.sh  service.yaml
llmmllab-runner/: Dockerfile  app.py
middleware/: __init__.py  auth.py  db_init_middleware.py  prometheus_metrics.py  request_id.py
models/: __init__.py  api_key.py  api_key_request.py  api_key_response.py  auth_config.py  chat_req.py  chat_response.py  config.py  conversation.py  conversation_ctx.py  database_config.py  default_configs.py  default_model_config.py  dev_stats.py  document.py  document_source.py  embedding_response.py  event_stream_config.py  execution_state.py  generate_req.py  generate_response.py  generation_state.py  image_generation_config.py  image_generation_request.py  image_generation_response.py  image_metadata.py  inference_service.py  inference_service_config.py  intent.py  internal_config.py  lang_graph_node_state.py  lang_graph_state.py  learned_limits.py  memory.py  memory_config.py  memory_fragment.py  memory_source.py  message.py  message_content.py  message_content_type.py  (+51 more)
routers/: api_key.py  chat.py  config.py  conversation.py  documents.py  metrics.py  model.py  ollama.py  todos.py  users.py  websockets.py
runner/: __init__.py  exceptions.py  pipeline_cache.py  pipeline_factory.py
scripts/: push_manifest.py
services/: __init__.py  api_key_service.py  completion_service.py  conversation_service.py  document_service.py  memory_service.py  message_service.py  model_resolver.py  model_service.py  runner_client.py  summary_service.py  todo_service.py  token_service.py  tool_service.py  user_config_service.py
tools/: registry.py  server_tool_executor.py
utils/: __init__.py  data_uri_utils.py  file_extensions.py  file_handler.py  logging.py  message_conversion.py  text_extraction.py  (+3 more)
(+1032 files in other folders)
