[project]
name = "llmmllab-inference"
version = "0.1.0"
description = "LLM inference service: OpenAI/Anthropic-compatible endpoints, LangGraph composer, llama.cpp runner"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "LongStoryMedia" }]
license = { text = "MIT" }

dependencies = [
    # FastAPI / web server
    "fastapi==0.116.2",
    "uvicorn==0.35.0",
    "websockets==15.0.1",
    "aiohttp==3.12.15",
    "httpx==0.28.1",
    "python-multipart==0.0.20",
    "requests>=2.32.0",

    # LangChain / LangGraph
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0,<3.0.0",
    "langgraph-checkpoint-postgres==2.0.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",

    # Model stack
    "transformers==4.56.1",
    "huggingface-hub==0.35.0",
    "diffusers==0.35.1",
    "sentence-transformers==5.1.0",
    "safetensors==0.6.2",
    "sentencepiece==0.2.1",
    "pillow==12.1.1",
    "gguf==0.17.1",
    "hy3dgen==2.0.2",
    "tiktoken==0.11.0",

    # Data
    "datasets==4.1.0",
    "fsspec==2024.6.1",
    "numpy==2.3.3",
    "pandas==2.3.2",
    "scikit-learn==1.7.2",

    # Storage
    "redis==6.4.0",
    "asyncpg==0.30.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "alembic>=1.14,<2.0",
    "psycopg[binary]==3.2.12",
    "psycopg2-binary==2.9.11",
    "faiss-cpu==1.12.0",

    # Core utils
    "pydantic==2.11.9",
    "python-dotenv==1.1.1",
    "packaging==25.0",
    "tenacity==9.1.2",
    "psutil==7.0.0",
    "watchfiles==1.1.0",
    "tqdm==4.67.1",

    # Auth
    "pyjwt[crypto]==2.10.1",
    "cryptography==45.0.7",

    # Observability
    "prometheus-client==0.22.1",
    "structlog==25.4.0",

    # Scheduling
    "apscheduler==3.11.0",

    # Third-party AI services
    "cohere==5.18.0",
    "openai-harmony==0.0.4",

    # GPU monitoring
    "nvsmi==0.4.2",
    "nvidia-ml-py==12.560.30",

    # Web / scraping
    "beautifulsoup4==4.14.2",
    "playwright==1.52.0",

    # Audio (OpenAI Whisper — NOT the unrelated `whisper` PyPI package)
    "openai-whisper>=20231117",

    # Build-time helpers kept as runtime deps because some packages reference them at import time
    "ninja==1.13.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio>=0.21.0",
    "aioresponses==0.7.8",
    "pyright>=1.1.0",
    "ruff>=0.6.0",
    "testcontainers[postgres]>=4.0.0",
]

# uv treats this project as "virtual" (no [build-system] present), so `uv sync`
# installs dependencies into .venv without trying to build/install the project
# itself. Application packages (server, runner, composer, db, utils, models)
# are imported via PYTHONPATH=/app at runtime.

[tool.uv]
package = false
